# aliyun-openapi-cpp-sdk

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
aliyun-api-aas/2015-07-01/: Makefile
aliyun-api-aas/2015-07-01/include/: ali_aas.h  ali_aas_create_access_key_for_account_types.h  ali_aas_create_aliyun_account_types.h  ali_aas_delete_access_key_for_account_types.h  ali_aas_get_basic_info_for_account_types.h  ali_aas_list_access_keys_for_account_types.h  ali_aas_update_access_key_status_for_account_types.h  ali_create_access_key_for_account_types.h  ali_create_aliyun_account_types.h  ali_delete_access_key_for_account_types.h  ali_get_basic_info_for_account_types.h  ali_list_access_keys_for_account_types.h  ali_update_access_key_status_for_account_types.h
aliyun-api-aas/2015-07-01/src/: ali_aas.cc  ali_aas_create_access_key_for_account.cc  ali_aas_create_aliyun_account.cc  ali_aas_delete_access_key_for_account.cc  ali_aas_get_basic_info_for_account.cc  ali_aas_list_access_keys_for_account.cc  ali_aas_update_access_key_status_for_account.cc  ali_create_access_key_for_account.cc  ali_create_aliyun_account.cc  ali_delete_access_key_for_account.cc  ali_get_basic_info_for_account.cc  ali_list_access_keys_for_account.cc  ali_update_access_key_status_for_account.cc
aliyun-api-aas/2015-07-01/test/: aas_test.cc
aliyun-api-ace-ops/2015-09-09/: Makefile
aliyun-api-ace-ops/2015-09-09/include/: ali_aceops.h  ali_aceops_query_types.h  ali_aceops_report_types.h  aliquery_types.h  alireport_types.h
aliyun-api-ace-ops/2015-09-09/src/: ali_aceops.cc  ali_aceops_query.cc  ali_aceops_report.cc  ali_query.cc  ali_report.cc
aliyun-api-ace-ops/2015-09-09/test/: aceops_test.cc
aliyun-api-ace/2015-07-13/: Makefile
aliyun-api-ace/2015-07-13/include/: ali_ace.h  ali_ace_describe_app_logs_types.h  ali_ace_get_monitor_data_types.h  ali_describe_app_logs_types.h  ali_get_monitor_data_types.h
aliyun-api-ace/2015-07-13/src/: ali_ace.cc  ali_ace_describe_app_logs.cc  ali_ace_get_monitor_data.cc  ali_describe_app_logs.cc  ali_get_monitor_data.cc
aliyun-api-ace/2015-07-13/test/: ace_test.cc
aliyun-api-alert/2015-08-15/: Makefile
aliyun-api-alert/2015-08-15/include/: ali_alert.h  ali_alert_batch_query_project_types.h  ali_alert_create_alert_types.h  ali_alert_create_contact_group_types.h  ali_alert_create_contact_types.h  ali_alert_create_db_metric_types.h  ali_alert_create_db_source_types.h  ali_alert_create_dimensions_types.h  ali_alert_create_level_channel_types.h  ali_alert_create_log_hub_metric_types.h  ali_alert_create_project_types.h  ali_alert_delete_alert_types.h  ali_alert_delete_contact_group_types.h  ali_alert_delete_contact_types.h  ali_alert_delete_db_metric_types.h  ali_alert_delete_db_source_types.h  ali_alert_delete_dimensions_types.h  ali_alert_delete_level_channel_types.h  ali_alert_delete_log_hub_metric_types.h  ali_alert_delete_project_types.h  ali_alert_disable_alert_types.h  ali_alert_enable_alert_types.h  ali_alert_get_alert_types.h  ali_alert_get_contact_group_types.h  ali_alert_get_contact_types.h  ali_alert_get_db_metric_types.h  ali_alert_get_db_source_types.h  ali_alert_get_dimensions_types.h  ali_alert_get_level_channel_types.h  ali_alert_get_log_hub_metric_types.h  ali_alert_get_project_types.h  ali_alert_grant_project_owner_types.h  ali_alert_list_alert_state_types.h  ali_alert_list_alert_types.h  ali_alert_list_contact_group_types.h  ali_alert_list_contact_types.h  ali_alert_list_db_metric_types.h  ali_alert_list_db_source_types.h  ali_alert_list_dimensions_types.h  ali_alert_list_level_channel_types.h  (+44 more)
aliyun-api-batchcompute/2013-01-11/: Makefile
aliyun-api-batchcompute/2015-06-30/: Makefile
aliyun-api-bss/2014-07-14/: Makefile
aliyun-api-cdn/2014-11-11/: Makefile
aliyun-api-cms/2015-04-20/: Makefile
aliyun-api-cms/2015-07-29/: Makefile
aliyun-api-cms/2015-08-01/: Makefile
aliyun-api-cms/2015-10-20/: Makefile
aliyun-api-crm/2015-04-08/: Makefile
aliyun-api-drds/2015-04-13/: Makefile
aliyun-api-dts/2015-06-29/: Makefile
aliyun-api-ecs/2014-05-26/: Makefile
aliyun-api-emr/2015-09-10/: Makefile
aliyun-api-ess/2014-08-28/: Makefile
aliyun-api-ocs/2015-03-01/: Makefile
aliyun-api-oms/2015-02-12/: Makefile
aliyun-api-ons/2015-10-20/: Makefile
aliyun-api-ossadmin/2013-07-12/: Makefile
aliyun-api-ossadmin/2014-03-26/: Makefile
aliyun-api-ossadmin/2015-03-02/: Makefile
aliyun-api-ossadmin/2015-05-20/: Makefile
aliyun-api-ots/2013-09-12/: Makefile
aliyun-api-otsfinance/2013-09-12/: Makefile
aliyun-api-otsshihua/2015-10-26/: Makefile
aliyun-api-pts/2015-08-01/: Makefile
aliyun-api-push/2015-08-27/: Makefile
aliyun-api-r-kvstore/2015-01-01/: Makefile
aliyun-api-ram/2014-02-14/: Makefile
aliyun-api-ram/2015-05-01/: Makefile
aliyun-api-rds/2014-08-15/: Makefile
aliyun-api-rds_region/2014-08-15/: Makefile
aliyun-api-risk/2015-03-23/: Makefile
aliyun-api-risk/2015-08-04/: Makefile
aliyun-api-slb/2013-02-21/: Makefile
aliyun-api-slb/2014-05-15/: Makefile
aliyun-api-sts/2015-04-01/: Makefile
aliyun-api-ubsms-inner/2015-06-23/: Makefile
aliyun-api-ubsms/2015-06-23/: Makefile
aliyun-api-yundun/2015-02-27/: Makefile
aliyun-api-yundun/2015-04-16/: Makefile
aliyun_api_core/: Makefile  ali_api_core.cc  ali_api_core.h  ali_get_region_host.cc  ali_get_region_host.h  ali_roa_request.cpp  ali_roa_request.h  ali_rpc_request.cc  ali_rpc_request.h  aliyun_api_core.sln  aliyun_api_core.vcxproj  core.sublime-project  core.sublime-workspace  http_test_listener.h  ld.exe.stackdump  test.exe.stackdump  testc  testc.exe.stackdump
aliyun_api_core/http/: ali_connection.h  ali_http_request.cc  ali_http_request.h  ali_tcp_connection.cc  ali_tcp_connection.h  ali_tls_connection.cc  ali_tls_connection.h
aliyun_api_core/test/: http_test_listener.cc  test.cc
aliyun_api_core/utils/: ali_encode_utils.cpp  ali_encode_utils.h  ali_log.cc  ali_log.h  ali_string_utils.cpp  ali_string_utils.h  ali_sys_network.h  ali_urlencode.cpp  ali_urlencode.h
example/: Makefile  ecs_example.cc
(+3337 files in other folders)
